fixed text overflow

--- a/toDo/src/App.css
+++ b/toDo/src/App.css
@@ -9,7 +9,7 @@ body {
     
     min-height: 100vh;
   }
-   
+
   h1 {
     color: #333;
     font-size: 2rem;
@@ -35,6 +35,7 @@ body {
     padding: 10px;
     border-top: 1px solid #ccc;
     text-align: left;
+    overflow-wrap: break-word;
   }
   
   h3 {
